--- a/www/index.html
+++ b/www/index.html
@@ -9,15 +9,9 @@
 	<body onload="init()">
 		
 		
-
-		<h2>Name: Natalia<br>
-            Surname: Lewczuk<br>
-		Email: n.lewczuk@gmail.com<br>
-		My website: none<br>
-		Dean's group number: 1012<br>
-		Field of study: IT
-		
+    <input type="button" onclick="checkConnection()" value="Sprawdz polaczenie z Internetem">
 		
 		
 	</body>
 </html>
+
