--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
 	<body onload="init()">
 		
 		
-    <input type="button" onclick="checkConnection()" value="Sprawdz polaczenie z Internetem">
+    <input type="button" onclick="motion()" value="Sprawdz ruch komorki">
 		
 		
 	</body>
